# cepta

./: .bazelignore  .bazelrc  .bazelrc.ci  .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .project  .travis.yml  AUTHORS.rst  BUILD  CHANGELOG.md  INSTALL.md  README.md  WORKSPACE  actors_id.txt  bazel-ghcepta  cepta.bazelproject  cities.csv  deploy_key.enc  go.mod  go.sum  go_proto_gql.BUILD  go_proto_gql.WORKSPACE  gqlproto.bzl  package-lock.json  pom.xml  rules.bzl  run.sh
osiris/: .project  BUILD  Dockerfile  Dockerfile.bazel  README.md  bazel.dockerfile  pom.xml
osiris/auth/: BUILD  server.go  server_test.go  test-auth.sh
osiris/auth/lib/: BUILD  auth.go
osiris/authentication/: BUILD  README.MD  auth.go  controllers.go  controllers_test.go  errors.go  main.go  server.go  server_test.go
osiris/authentication/lib/: BUILD
osiris/authentication/models/: BUILD  accounts.go  accounts_test.go  base.go
osiris/bookkeeper/: BUILD  server.go  server_test.go
osiris/kafkaproducer/: main.go
osiris/lib/: BUILD  cli.go  converters.go  db.go  kafkaconsumer.go  kafkaproducer.go  options.go  tmpmodels.go  utils.go
osiris/lib/db/: BUILD  (+3 more)
osiris/notification/: BUILD  go.mod  go.sum  kafkaconsumer.go  server.go  server_test.go
osiris/query/: BUILD  README.md  db.go  query.go  server.go  server_test.go
osiris/user-management/: BUILD  server.go
osiris/user_management/: BUILD  server.go  server_test.go  user_management.go
osiris/usermgmt/: BUILD  server.go  server_test.go
osiris/websockets/: go.mod  go.sum  index.html  kafkaconsumer.go  main.go
(+947 files in other folders)
